# strands-cli

./: CLAUDE.md  Cargo.toml
.strands/: mcp.json
.strands/skills/commit/: SKILL.md
.strands/skills/review-pr/: SKILL.md
src/: main.rs  mcp.rs  repl.rs  session.rs  title_generator.rs
src/commands/: mod.rs
src/context/: analysis.rs  git.rs  mod.rs  user_context.rs
src/prompt/: builder.rs  dynamic_sections.rs  mod.rs  section.rs  static_sections.rs
src/tui/: app.rs  event.rs  keybindings.rs  mod.rs  render.rs  terminal.rs  tui_tests.rs
src/tui/widgets/: input_bar.rs  markdown.rs  messages.rs  mod.rs  model_picker.rs  permission.rs  status_bar.rs  suggestions.rs  tool_call.rs
tests/: bedrock_model_switch.rs
