[package]
name = "strands-cli"
version = "0.1.0"
edition = "2021"
description = "Interactive CLI for Strands Agents"

[[bin]]
name = "strands"
path = "src/main.rs"

[dependencies]
# Strands SDK and tools
strands-agents = { path = "../sdk-rust", features = ["anthropic", "openai"] }
strands-tools = { path = "../tools-rust", features = ["file-tools", "system-tools", "advanced-tools", "utility-tools"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal colors (plain REPL fallback)
colored = "2"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = { version = "0.7", features = ["crossterm"] }
tokio-util = { version = "0.7", features = ["rt"] }
pulldown-cmark = "0.12"
unicode-width = "0.2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

# Clipboard (OSC 52)
base64 = "0.22"

# Misc
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
